--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<p>Hello, world!, this is a test sentence</p>
+<!DOCTYPE html>
+<head>
+  <title> The Athletic carrer of Nicholas Pena</title>
+  <meta name="charset" content="UTF-8"
+  <meta name="desrciption" content="The Athleteic carrer of Nicholas Pena" >
+  <meta name="author" content=" Nicholas Pena"
+  <meta name="key words" content="Oppurtunity Knocking and he over came"
+</head>  
+</body>
+  <p>Nicholas Pena, a KIPP Great Upstart</p>
+  <h1>Big Athletic begginnings in KIPP</h1>
+  <h2>Great Academic scholar as well</h2>
+  <h3>Greatest first wrestling season</h3>
+  <ol>
+    <li>Nicholas Pena the starting center of JV of the 2015 football season at KIPP</li>
+  </ol>
+  <ul>
+    <li>Came out of no where</li>
+  </ul>
+</body>
