--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <li>Nicholas Pena the starting center of JV of the 2015 football season at KIPP</li>
   </ol>
   <ul>
-    <li>Came out of no where</li>
+    <li id="nick">Came out of no where</li>
   </ul>
 </body>
