--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <link type="text/css" rel="stylesheet.css" src="stylesheet.css"
+  <link id="title" type="text/css" rel="stylesheet.css" src="stylesheet.css">
   <title> The Athletic carrer of Nicholas Pena</title>
   <meta name="charset" content="UTF-8"
   <meta name="desrciption" content="The Athleteic carrer of Nicholas Pena" >
