--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <head>
-  <link id="title" type="text/css" rel="stylesheet.css" src="stylesheet.css">
+  <link type="text/css" rel="stylesheet.css" src="stylesheet.css">
   <title> The Athletic carrer of Nicholas Pena</title>
-  <meta name="charset" content="UTF-8"
+  <meta name="charset" content="UTF-8">
   <meta name="desrciption" content="The Athleteic carrer of Nicholas Pena" >
-  <meta name="author" content=" Nicholas Pena"
-  <meta name="key words" content="Oppurtunity Knocking and he over came"
+  <meta name="author" content=" Nicholas Pena">
+  <meta name="key words" content="Oppurtunity Knocking and he over came">
 </head>  
-</body>
+<body>
   <p>Nicholas Pena, a KIPP Great Upstart</p>
-  <h1>Big Athletic begginnings in KIPP</h1>
+  <h1 id="title">Big Athletic begginnings in KIPP</h1>
   <h2>Great Academic scholar as well</h2>
   <h3>Greatest first wrestling season</h3>
   <ol>
