--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content=" Nicholas Pena">
   <meta name="key words" content="Oppurtunity Knocking and he over came">
 </head>  
-<body>
+<body id="body_text">
   <p>Nicholas Pena, a KIPP Great Upstart</p>
   <h1 id="title">Big Athletic begginnings in KIPP</h1>
   <h2>Great Academic scholar as well</h2>
