--- a/index.html
+++ b/index.html
@@ -18,5 +18,5 @@
   <ul>
     <li id="nick">Came out of no where</li>
   </ul>
-  <img src="nicholas_pic.jpg">
+  <img id="my_pic" src="nicholas_pic.jpg">
 </body>
