--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <title> The Athletic carrer of Nicholas Pena</title>
+  <title>Nicholas Pena loves fine Quisien</title>
   <meta name="charset" content="UTF-8">
-  <meta name="desrciption" content="The Athleteic carrer of Nicholas Pena" >
+  <meta name="desrciption" content="Nicholas's Love's Food" >
   <meta name="author" content=" Nicholas Pena">
-  <meta name="key words" content="Oppurtunity Knocking and he over came">
+  <meta name="key words" content="Never can have enough">
 </head>  
 <body id="body_text">
-  <p>Nicholas Pena, a KIPP Great Upstart</p>
-  <h1 id="title">Big Athletic begginnings in KIPP</h1>
-  <h2>Great Academic scholar as well</h2>
-  <h3>Greatest first wrestling season</h3>
+  
+  <h1 id="title"> Can Never say NO to a good meal</h>
   <ol>
-    <li>Nicholas Pena the starting center of JV of the 2015 football season at KIPP</li>
+    <li>Nicholas's Favorite Foods</li>
   </ol>
   <ul>
-    <li id="nick">Came out of no where</li>
+    <li id="nick">Ice cream</li>
+    <li Lasangna</li>
+    <li Snadwiches</li>
   </ul>
   <img id="my_pic" src="nicholas_pic.jpg">
+  <p>"I have been fond of great food ever since I was a baby "</p>
 </body>
