--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@
     <li Snadwiches</li>
   </ul>
   <img id="my_pic" src="nicholas_pic.jpg">
-  <p>"I have been fond of great food ever since I was a baby "</p>
+  <p>"I have been fond of great food ever since I was a baby. Though I was always picky "</p>
 </body>
