--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <script src="myscripts.js"></script>
   <title>Nicholas Pena loves fine Quisien</title>
   <meta name="charset" content="UTF-8">
   <meta name="desrciption" content="Nicholas's Love's Food" >
