--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </ol>
   <ul>
     <li id="nick">Ice cream</li>
-    <li Lasangna</li>
-    <li Snadwiches</li>
+    <li> Lasangna</li>
+    <li> Sandwiches</li>
   </ul>
   <img id="my_pic" src="nicholas_pic.jpg">
   <p>"I have been fond of great food ever since I was a baby. Though I was always picky "</p>
