--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="author" content=" Nicholas Pena">
   <meta name="key words" content="Never can have enough">
 </head>  
-<body id="body_text">
+<body>
   
-  <h1 id="title"> Can Never say NO to a good meal</h>
+  <h1> id="title"> Can Never say NO to a good meal</h1>
   <ol>
     <li>Nicholas's Favorite Foods</li>
   </ol>
@@ -20,5 +20,5 @@
     <li> Sandwiches</li>
   </ul>
   <img id="my_pic" src="nicholas_pic.jpg">
-  <p>"I have been fond of great food ever since I was a baby. Though I was always picky "</p>
+  <p id="body_text">"I have been fond of great food ever since I was a baby. Though I was always picky "</p>
 </body>
