--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>  
 <body>
   
-  <h1> id="title"> Can Never say NO to a good meal</h1>
+  <h1 id="title"> Can Never say NO to a good meal</h1>
   <ol>
     <li>Nicholas's Favorite Foods</li>
   </ol>
