--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 <body>
   
   <h1 id="title"> Can Never say NO to a good meal</h1>
-  <ol>
-    <li>Nicholas's Favorite Foods</li>
-  </ol>
+  <h2>Nicholas's Favorite Foods</h2>
   <ul>
     <li id="nick">Ice cream</li>
     <li id="tasty"> Lasangna</li>
