--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <li id="tasty"> Lasangna</li>
     <li id="mouth"> Sandwiches</li>
   </ul>
-  <img id="my_pic" src="nicholas_pic.jpg">
-  <p id="body_text">"I have been fond of great food ever since I was a baby. Though I was always picky "</p>
+  <div id="text_wrapper"> </div> <img id="my_pic" src="nicholas_pic.jpg">
+  <p id="body_text">"I have been fond of great food ever since I was a baby. Though I was always picky "</p> </div>
 </body>
