--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
     <li id="mouth">Sandwiches</li>
   </ul>
   <div id="text_wrapper"> </div> <img id="my_pic" src="nicholas_pic.jpg">
-  <p id="body_text">"I have been fond of great food ever since I was a baby. Though I was always picky "</p> </div>
+  <p id="body_text">"I have been fond of great food ever since I was a baby. Though, ionically I was always a very picky eater according to my mom" 
+  
+    Quoting her exactly "He likes very little, but eats alot of what he does likes"</p> </div>
 </body>
