--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <li id="tasty">Lasangna</li>
     <li id="mouth">Sandwiches</li>
   </ul>
-  <img class="good" src="great.jpg"
+  <img class="good" src="great.jpg">
   <img class="good" src="good.jpg">
+  <img class="good" src="unknown.jpg"
   <div id="text_wrapper"> </div> <img id="my_pic" src="nicholas_pic.jpg">
   <p id="body_text">"I have been fond of great food ever since I was a baby. Though, ionically I was always a very picky eater according to my mom" 
   
