--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </ul>
   <img class="good" src="great.jpg">
   <img class="good" src="good.jpg">
-  <img class="good" src="unknown.jpg"
+  <img class="good" src="Unknown.jpg"
   <div id="text_wrapper"> </div> <img id="my_pic" src="nicholas_pic.jpg">
   <p id="body_text">"I have been fond of great food ever since I was a baby. Though, ionically I was always a very picky eater according to my mom" 
   
