--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
   <meta name="key words" content="Never can have enough">
 </head>  
 <body>
-  
-  <h1 id="title"> Can Never say NO to a good meal</h1>
-  <h2>Nicholas's Favorite Foods</h2>
-  <ul>
-    <li id="nick">Ice cream</li>
-    <li id="tasty">Lasangna</li>
-    <li id="mouth">Sandwiches</li>
-  </ul>
-  <img class="good" src="great.jpg">
-  <img class="good" src="good.jpg">
-  <img class="good" src="Unknown.jpg">
-  <div id="text_wrapper"> </div> <img id="my_pic" src="nicholas_pic.jpg">
+  <div id="text_wrapper">
+    <h1 id="title"> Can Never say NO to a good meal</h1>
+    <h2>Nicholas's Favorite Foods</h2>
+    <ul>
+      <li id="nick">Ice cream</li>
+      <li id="tasty">Lasangna</li>
+      <li id="mouth">Sandwiches</li>
+    </ul>
+    <img class="good" src="great.jpg">
+    <img class="good" src="good.jpg">
+    <img class="good" src="Unknown.jpg">
+  </div>
+  <img id="my_pic" src="nicholas_pic.jpg">
   <p id="body_text">"I have been fond of great food ever since I was a baby. Though, ionically I was always a very picky eater according to my mom" 
   
     Quoting her exactly "He likes very little, but eats alot of what he does likes"</p> </div>
