--- a/index.html
+++ b/index.html
@@ -24,5 +24,5 @@
   <img id="my_pic" src="nicholas_pic.jpg">
   <p id="body_text">"I have been fond of great food ever since I was a baby. Though, ionically I was always a very picky eater according to my mom" 
   
-    Quoting her exactly "He likes very little, but eats alot of what he does likes"</p> </div>
+    Quoting her exactly "He likes very little, but eats alot of what he does likes". Also, a constant line I get is that "Nicholas don't tough the snacks". Lastly, the best part is I'm in great shape and I can eat all the maels I please with little consideration. Thanks for visiting my first website that's it. BYE!!! </p> </div>
 </body>
